fix: remove overlapping members-only notice on projects/show

--- a/app/assets/stylesheets/projects/show2.scss
+++ b/app/assets/stylesheets/projects/show2.scss
@@ -254,9 +254,6 @@ a {
           line-height: 1;
         }
         .header-about-members-only {
-          position: absolute;
-          bottom: 0;
-          left: 0;
           letter-spacing: 1px;
           max-width: 170px;
         }
